# pontificate

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon
.kittify/: canonical-events.jsonl  command-skills-manifest.json  config.yaml  metadata.yaml
.kittify/charter/: charter.md  directives.yaml  governance.yaml  metadata.yaml  references.yaml  synthesis-manifest.yaml
.kittify/charter/interview/: answers.yaml
.kittify/missions/01KTJ00RKMX79WXDQRTV1CAEH0/: retrospective.yaml
.kittify/missions/01KTJVYNMXPYZGD3WGKEZESX6T/: retrospective.yaml
.kittify/missions/software-dev/: mission.yaml
core/include/: pontificate_core.h
core/src/: main.zig  media.zig  pontificate.zig  probe.zig  project.zig  timeline.zig
docs/: ARCHITECTURE.md  DISTRIBUTION.md  FEATURES.md
kitty-specs/media-probe-and-preview-foundation-01KTK4DY/: data-model.md  meta.json  plan.md  quickstart.md  research.md  spec.md  status.events.jsonl  tasks.md  wps.yaml
kitty-specs/media-probe-and-preview-foundation-01KTK4DY/contracts/: pontificate-core-probe-preview-c-abi.md
kitty-specs/media-probe-and-preview-foundation-01KTK4DY/tasks/: WP01-probe-parser-and-metadata-model.md  WP02-project-persistence-probe-execution-and-cli.md  WP03-c-abi-probe-boundary.md  WP04-qt-metadata-and-preview-surface.md  WP05-documentation-validation-and-acceptance-notes.md
kitty-specs/pontificate-editor-foundation-and-media-library-01KTJ00R/: acceptance-matrix.json  analysis-report.md  issue-matrix.md  lanes.json  meta.json  mission-review-report.md  plan.md  spec.md  status.events.jsonl  status.json  tasks.md  wps.yaml
kitty-specs/pontificate-editor-foundation-and-media-library-01KTJ00R/decisions/: DM-01KTJQKJWMTRKV41ZHK3EB0Y9Y.md  DM-01KTJQKJX3PAQEJ7PAGCESRG98.md  DM-01KTJQKJXH21CHGH707782HE79.md  DM-01KTJQKJXZ5EMWB0N7YNSWSBZ4.md  DM-01KTJQKJYDGRDB631BBA7F9YRD.md  DM-01KTJQKJYVPTE9E6KHGAEW4424.md  DM-01KTJQKJZAAHF74M0R6GCHFXPP.md  index.json
kitty-specs/pontificate-editor-foundation-and-media-library-01KTJ00R/tasks/: WP01-core-media-asset-model.md  WP02-project-persistence-and-cli-inspection.md  WP03-asset-backed-timeline-model.md  WP04-c-abi-project-boundary.md  WP05-qt-library-import-and-timeline-display.md  WP06-documentation-and-validation.md
kitty-specs/timeline-editing-and-keyframe-engine-01KTJVYN/: acceptance-matrix.json  analysis-report.md  data-model.md  issue-matrix.md  lanes.json  meta.json  mission-review-report.md  plan.md  quickstart.md  spec.md  status.events.jsonl  status.json  tasks.md  wps.yaml
kitty-specs/timeline-editing-and-keyframe-engine-01KTJVYN/contracts/: pontificate-core-editing-c-abi.md
kitty-specs/timeline-editing-and-keyframe-engine-01KTJVYN/tasks/: WP01-core-timeline-editing-and-keyframes.md  WP02-project-persistence-and-cli-editing-inspection.md  WP03-c-abi-editing-boundary.md  WP04-qt-timeline-editing-affordances.md  WP05-documentation-contracts-and-validation-notes.md
ui/src/: main.cpp
